Fix account page has wrong padding in section

--- a/react/src/styles/App.module.scss
+++ b/react/src/styles/App.module.scss
@@ -1191,6 +1191,11 @@ a {
         height: initial;
     }
 
+    &--account {
+        display: flex;
+        flex-direction: column;
+    }
+
     &--main-search {
         display: flex;
         font-size: $font-size-big;
